--- a/app.yaml
+++ b/app.yaml
@@ -1,13 +1,13 @@
 application: agilekalaftest
-version: 4
+version: 5
 runtime: python27
 api_version: 1
 threadsafe: true
 
 handlers:
-- url: /(.*\.(gif|png|jpg|ico|js|css))
+- url: /(.*\.(gif|png|jpg|ico|js|css|jpeg))
   static_files: \1
-  upload: (.*\.(gif|png|jpg|ico|js|css))
+  upload: (.*\.(gif|png|jpg|ico|js|css|jpeg))
 
 - url: /robots.txt
   static_files: robots.txt
